--- a/bucket/templates/index.html
+++ b/bucket/templates/index.html
@@ -13,14 +13,11 @@
             crossorigin="anonymous"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
-
     <title>인생 버킷리스트</title>
-
     <style>
-        * {
+* {
             font-family: 'Gowun Dodum', sans-serif;
         }
-
         .mypic {
             width: 100%;
             height: 200px;
@@ -36,11 +33,9 @@
             align-items: center;
             justify-content: center;
         }
-
         .mypic > h1 {
             font-size: 30px;
         }
-
         .mybox {
             width: 95%;
             max-width: 700px;
@@ -48,7 +43,6 @@
             box-shadow: 0px 0px 10px 0px lightblue;
             margin: 20px auto;
         }
-
         .mybucket {
             display: flex;
             flex-direction: row;
@@ -59,7 +53,6 @@
         .mybucket > input {
             width: 70%;
         }
-
         .mybox > li {
             display: flex;
             flex-direction: row;
@@ -69,7 +62,6 @@
             margin-bottom: 10px;
             min-height: 48px;
         }
-
         .mybox > li > h2 {
             max-width: 75%;
             font-size: 20px;
@@ -77,9 +69,8 @@
             margin-right: auto;
             margin-bottom: 0px;
         }
-
         .mybox > li > h2.done {
-            text-decoration: line-through
+            text-decoration:line-through
         }
     </style>
     <script>
@@ -93,18 +84,39 @@
                 url: "/bucket",
                 data: {},
                 success: function (response) {
-                    alert(response["msg"])
+                    let rows = response['bucket']
+                    for (let i = 0; i < rows.length; i++) {
+                        let bucket = rows[i]['bucket']
+                        let num = rows[i]['num']
+                        let done = rows[i]['done']
+
+                        let temp_html = ``
+                        if (done == 0) {
+                            temp_html = `<li>
+                                            <h2>✅ ${bucket}</h2>
+                                            <button onclick="done_bucket(${num})" type="button" class="btn btn-outline-primary">완료!</button>
+                                         </li>`
+                        } else {
+                            temp_html = `<li>
+                                            <h2 class="done">✅ ${bucket}</h2>
+                                         </li>`
+                        }
+                        $('#bucket-list').append(temp_html)
+                    }
                 }
             });
         }
 
         function save_bucket() {
+            let bucket = $('#bucket').val()
+
             $.ajax({
                 type: "POST",
                 url: "/bucket",
-                data: {sameple_give: '데이터전송'},
+                data: {bucket_give: bucket},
                 success: function (response) {
                     alert(response["msg"])
+                    window.location.reload()
                 }
             });
         }
@@ -113,36 +125,26 @@
             $.ajax({
                 type: "POST",
                 url: "/bucket/done",
-                data: {sameple_give: '데이터전송'},
+                data: {num_give: num},
                 success: function (response) {
                     alert(response["msg"])
+                    window.location.reload()
                 }
             });
         }
     </script>
 </head>
 <body>
-    <div class="mypic">
-        <h1>나의 버킷리스트</h1>
+<div class="mypic">
+    <h1>나의 버킷리스트</h1>
+</div>
+<div class="mybox">
+    <div class="mybucket">
+        <input id="bucket" class="form-control" type="text" placeholder="이루고 싶은 것을 입력하세요">
+        <button onclick="save_bucket()" type="button" class="btn btn-outline-primary">기록하기</button>
     </div>
-    <div class="mybox">
-        <div class="mybucket">
-            <input id="bucket" class="form-control" type="text" placeholder="이루고 싶은 것을 입력하세요">
-            <button onclick="save_bucket()" type="button" class="btn btn-outline-primary">기록하기</button>
-        </div>
-    </div>
-    <div class="mybox" id="bucket-list">
-        <li>
-            <h2>✅ 호주에서 스카이다이빙 하기</h2>
-            <button onclick="done_bucket(5)" type="button" class="btn btn-outline-primary">완료!</button>
-        </li>
-        <li>
-            <h2 class="done">✅ 호주에서 스카이다이빙 하기</h2>
-        </li>
-        <li>
-            <h2>✅ 호주에서 스카이다이빙 하기</h2>
-            <button type="button" class="btn btn-outline-primary">완료!</button>
-        </li>
-    </div>
+</div>
+<div class="mybox" id="bucket-list">
+</div>
 </body>
 </html>
